# dev-cli

./: Cargo.toml
.github/workflows/: rust.yml
src/: main.rs
src/cli/: bash.rs  download.rs  execute.rs  file.rs  mod.rs  process_matches.rs  save.rs  utils.rs
src/cli/commands/: mod.rs  project.rs  search.rs
src/cli/lang/: cpp.rs  mod.rs  python.rs  ruby.rs  rust.rs
src/cli/requests/: request.rs
src/cli/search/: config.rs  mod.rs  models.rs  query.rs
src/dev_cli/: exec.rs  file.rs  mod.rs  save.rs  utils.rs
src/dev_cli/commands/: mod.rs  project.rs
src/dev_cli/lang/: language.rs  mod.rs  python.rs
src/dev_cli/request/: get.rs  mod.rs
