[package]
name = "dev-cli"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["cargo"] }
futures = "0.3.17"
reqwest = { version = "0.11.4", features = ["blocking"] }
tokio = { version = "1.9.0", features = ["full"] }
