[package]
name = "dev-cli"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["cargo"] }
dirs = "5.0.0"
futures = "0.3.17"
reqwest = { version = "0.11.4", features = ["json"] }
tokio = { version = "1.9.0", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_yaml = "0.9"
textwrap = "0.16.0"
